--- a/client-mobile/leco/package.json
+++ b/client-mobile/leco/package.json
@@ -7,8 +7,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "angular-gauge": "^3.1.1",
     "expo": "^32.0.0",
     "react": "16.5.0",
+    "react-input-range": "^1.3.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-range-slider": "^0.1.2",
     "socket.io-client": "^2.2.0"
